--- a/_data/navigation_footer2.yml
+++ b/_data/navigation_footer2.yml
@@ -6,9 +6,9 @@
 - title: Privacy policy
   url: /privacy/
 
-- title: Contact
+- title: About
   url: /about/
 
-- title: Blog
-  url: /blog/
+- title: PGP
+  url: /pgp/
 
